--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap');
+
 :root {
   --primary-color: rgb(17, 86, 102);
   --primary-color-darker: rgb(9, 48, 56);
@@ -15,17 +16,18 @@ body {
   margin: 0;
   padding: 0;
   background: var(--primary-color);
-  font-family: 'Open sans', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 1.3em;
   line-height: 1.5em;
 }
 
 .container {
-  max-width: 640px;
+  max-width: 440px;
   margin:3rem auto;
   background: #fff;
   padding: 15px;
   border-radius: 10px;
+  text-align: center;
 }
 .container h1,h2{
   margin:5px 0;
@@ -88,6 +90,8 @@ form button:hover {
 
 button{
   padding:.5rem ;
+  font-weight: 600;
+  cursor:pointer;
 }
 
 .pausado {
